@@ -20,6 +20,7 @@ import org.esup_portail.esup_stage.security.ServiceContext;
 import org.esup_portail.esup_stage.service.Structure.StructureService;
 import org.esup_portail.esup_stage.service.apogee.ApogeeService;
 import org.esup_portail.esup_stage.service.apogee.model.EtudiantRef;
+import org.esup_portail.esup_stage.service.apogee.model.InfosAdmEtu;
 import org.esup_portail.esup_stage.service.ldap.LdapService;
 import org.esup_portail.esup_stage.service.ldap.model.LdapUser;
 import org.esup_portail.esup_stage.service.signature.SignatureService;
@@ -122,6 +123,9 @@ public class ConventionService {
                 tuteurPro.setLoginInfosAJour(utilisateur.getLogin());
                 contactJpaRepository.save(tuteurPro);
             }
+            if (updateNomSignataireComposante(convention)) {
+                conventionJpaRepository.save(convention);
+            }
         }
     }
 
@@ -159,15 +163,23 @@ public class ConventionService {
         Etudiant etudiant = etudiantRepository.findByNumEtudiant(conventionFormDto.getNumEtudiant());
         if (etudiant == null) {
             etudiant = new Etudiant();
-            etudiant.setIdentEtudiant(ldapEtudiant.get(0).getUid());
+            etudiant.setIdentEtudiant(ldapEtudiant.getFirst().getUid());
             etudiant.setNumEtudiant(conventionFormDto.getNumEtudiant());
             etudiant.setCodeUniversite(appConfigService.getConfigGenerale().getCodeUniversite());
         }
-        etudiant.setNom(String.join(" ", ldapEtudiant.get(0).getSn()));
-        etudiant.setPrenom(String.join(" ", ldapEtudiant.get(0).getGivenName()));
-        etudiant.setMail(ldapEtudiant.get(0).getMail());
+        etudiant.setNom(String.join(" ", etudiantRef.getNompatro()));
+        etudiant.setPrenom(String.join(" ", etudiantRef.getPrenom()));
+        etudiant.setMail(etudiantRef.getMail());
         etudiant.setCodeSexe(etudiantRef.getCodeSexe());
         etudiant.setDateNais(etudiantRef.getDateNais());
+
+        InfosAdmEtu infosAdmEtu = apogeeService.getInfosAdmEtudiant(etudiant.getNumEtudiant());
+        if (infosAdmEtu != null) {
+            etudiant.setPrenomEtatCivil(infosAdmEtu.getPrenomEtatCivil());
+            etudiant.setSexEtatCivil(infosAdmEtu.getSexEtatCivil());
+            etudiant.setPrenom2(infosAdmEtu.getPrenom2());
+        }
+
         etudiant = etudiantJpaRepository.saveAndFlush(etudiant);
 
         // Ajout du pays de la convention à France si non renseigné
@@ -353,7 +365,7 @@ public class ConventionService {
             put(keyTel, convention.getSignataire().getTel());
         }});
         data.put("directeur du département", new HashMap<>() {{
-            put(keyMail, convention.getCentreGestion().getMailViseur());
+            put(keyMail, !Strings.isEmpty(convention.getCentreGestion().getMailDelegataireViseur()) ? convention.getCentreGestion().getMailDelegataireViseur() : convention.getCentreGestion().getMailViseur());
             put(keyTel, convention.getCentreGestion().getTelephone());
         }});
 
@@ -373,6 +385,44 @@ public class ConventionService {
             }
         }
         return response;
+    }
+
+    private boolean updateNomSignataireComposante(Convention convention) {
+        CentreGestion centreGestion = convention.getCentreGestion();
+        if (centreGestion == null) {
+            return false;
+        }
+
+        boolean hasDelegataire = !Strings.isEmpty(centreGestion.getNomDelegataireViseur()) || !Strings.isEmpty(centreGestion.getPrenomDelegataireViseur());
+        String prenom = hasDelegataire ? centreGestion.getPrenomDelegataireViseur() : centreGestion.getPrenomViseur();
+        String nom = hasDelegataire ? centreGestion.getNomDelegataireViseur() : centreGestion.getNomViseur();
+        String qualite = hasDelegataire ? centreGestion.getQualiteDelegataireViseur() : centreGestion.getQualiteViseur();
+        String fullName = buildFullName(prenom, nom);
+
+        boolean updated = false;
+        if (!Strings.isEmpty(fullName) && !fullName.equals(convention.getNomSignataireComposante())) {
+            convention.setNomSignataireComposante(fullName);
+            updated = true;
+        }
+        if (!Strings.isEmpty(qualite) && !qualite.equals(convention.getQualiteSignataire())) {
+            convention.setQualiteSignataire(qualite);
+            updated = true;
+        }
+        return updated;
+    }
+
+    private String buildFullName(String prenom, String nom) {
+        StringBuilder sb = new StringBuilder();
+        if (!Strings.isEmpty(prenom)) {
+            sb.append(prenom.trim());
+        }
+        if (!Strings.isEmpty(prenom) && !Strings.isEmpty(nom)) {
+            sb.append(" ");
+        }
+        if (!Strings.isEmpty(nom)) {
+            sb.append(nom.trim());
+        }
+        return sb.toString().trim();
     }
 
     public void updateSignatureElectroniqueHistorique() {
@@ -410,34 +460,4 @@ public class ConventionService {
         }
         return signataires;
     }
-
-    public void sendValidationMail(Convention convention, Avenant avenant, Utilisateur utilisateurContext, String templateMailCode, boolean sendMailEtudiant, boolean sendMailEnseignant, boolean sendMailGestionnaire, boolean sendMailRespGestionnaire) {
-        // Récupération du personnel du centre de gestion de la convention avec alertMail=1
-        List<PersonnelCentreGestion> personnels = convention.getCentreGestion().getPersonnels();
-        personnels = personnels.stream().filter(p -> p.getAlertesMail() != null && p.getAlertesMail()).collect(Collectors.toList());
-
-        // Récupération de la fiche utilisateur des personnels
-        if (sendMailGestionnaire || sendMailRespGestionnaire) {
-            List<Utilisateur> utilisateurPersonnels = utilisateurJpaRepository.findByUids(personnels.stream().map(PersonnelCentreGestion::getUidPersonnel).collect(Collectors.toList()));
-            if (convention.getCentreGestion().isOnlyMailCentreGestion()) {
-                mailerService.sendAlerteValidation(convention.getCentreGestion().getMail(), convention, avenant, utilisateurContext, templateMailCode);
-            } else {
-                for (PersonnelCentreGestion personnel : personnels) {
-                    Utilisateur utilisateur = utilisateurPersonnels.stream().filter(u -> u.getUid().equals(personnel.getUidPersonnel())).findAny().orElse(null);
-                    if ((utilisateur == null || !UtilisateurHelper.isRole(utilisateur, Role.RESP_GES))) {
-                        if (mailerService.isAlerteActif(personnel, templateMailCode) && sendMailGestionnaire)
-                            mailerService.sendAlerteValidation(personnel.getMail(), convention, avenant, utilisateurContext, templateMailCode);
-                    } else if ((utilisateur != null && UtilisateurHelper.isRole(utilisateur, Role.RESP_GES))) {
-                        if (mailerService.isAlerteActif(personnel, templateMailCode) && sendMailRespGestionnaire)
-                            mailerService.sendAlerteValidation(personnel.getMail(), convention, avenant, utilisateurContext, templateMailCode);
-                    }
-                }
-            }
-        }
-        if (sendMailEtudiant)
-            mailerService.sendAlerteValidation(convention.getEtudiant().getMail(), convention, avenant, utilisateurContext, templateMailCode);
-        if (sendMailEnseignant)
-            mailerService.sendAlerteValidation(convention.getEnseignant().getMail(), convention, avenant, utilisateurContext, templateMailCode);
-    }
-
 }
